# erichthonius-backend

./: .gitignore  Makefile  README.md  app-start.sh  app.dockerfile  docker-compose.yml  pyproject.toml  worker-start.sh  worker.dockerfile
alembic/: env.py
alembic/versions/: 6312e2ecbbd6_init.py  ca7377a65158_create_files_table.py
app/: main.py  pre_start.py  worker.py
app/core/: celery_app.py  config.py
app/crud/: crud.py
app/db/: config.py  models.py
app/routes/: api.py  base.py  files.py  groups.py  periods.py
app/schemas/: schemas.py
