[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["cmrd.a <cmrd.a@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.2"
fastapi = "^0.47.1"
celery = {extras = ["redis"], version = "^4.4.0"}
psycopg2-binary = "^2.8.4"
alembic = "^1.3.3"
beautifulsoup4 = "^4.8.2"
tenacity = "^6.0.0"
flower = "^0.9.3"
email-validator = "^1.0.5"
watchdog = "^0.10.1"
pyyaml = "^5.3"
argh = "^0.26.2"
argparse = "^1.4.0"
pathtools = "^0.1.2"
loguru = "^0.4.1"
requests = "^2.22.0"
pydantic = "^1.4"
openpyxl = "^3.0.3"
asyncpg = "^0.20.1"
databases = {extras = ["postgresql"], version = "^0.2.6"}

[tool.poetry.dev-dependencies]
aiosqlite = "^0.11.0"
psycopg2-binary = "^2.8.4"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
